# handybox

./: .gitignore  .gitmodules  README.md  README_zh.md  hand-completions.bash  hand-completions.sh  hand.sh  hand_bin  handy  install.sh  install_bin.sh  install_handy.sh  package.json
completions/: _hand  comp.sh  complete.sh  hand_bash_comp.sh  hand_zsh_comp.sh
config/example/: alias.sh  custom.sh  short.sh  workspace.sh
example/: alias.sh  custom.sh  init_config.sh
example/hand/: example.sh
hand/: adb.sh  bcompare.comp.sh  bcompare.sh  cd.cmd.sh  cd.sh  computer.sh  configmirror.comp.sh  configmirror.sh  ctags.comp.sh  ctags.sh  echo.comp.sh  echo.sh  encode.sh  eos.comp.sh  eos.sh  find.comp.sh  find.sh  md.comp.sh  md.sh  myhome.comp.sh  myhome.sh  note.comp.sh  note.sh  prop.comp.sh  prop.sh  remote.comp.sh  remote.sh  rn.comp.sh  rn.sh  ssh.sh  thread.sh  update.comp.sh  update.sh  wificap.comp.sh  wificap.sh  work.sh
hand/adb/: connect.comp.sh  connect.sh  detect.sh  push.comp.sh  push.sh
hand/android/: emulator.sh  getpath.comp.sh  getpath.sh  gettop.sh  make.comp.sh  make.sh  newdevice.sh
hand/cd/: android.comp.sh  android.sh  cmd.sh  config.cmd.sh  config.sh  git.cmd.sh  git.sh  repo.cmd.sh  repo.sh
hand/config/: sync.sh
hand/configmirror/: push.sh  update.sh
hand/echo/: cmd.sh  comp.sh
hand/echo.cmd/: echo.cmd.sh  echo.comp.sh  echo.sh
hand/git/: gettop.sh  mydepot.comp.sh  mydepot.sh  pushref.sh  st.sh
hand/lcd/: gencmd.sh  select.sh
hand/remote/: cmd.sh  (+2 more)
templete/python-project/: Makefile  cmd.sh  comp.sh  main.py  pyproject.toml
(+57 files in other folders)
