[tool.poetry]
name = "hello"
version = "1.0.0"
description = "hello project managed by poetry"
authors = ["Handybox <handybox@handybox-sample.com>"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
